fix spacing

--- a/public/assets/rapyd.css
+++ b/public/assets/rapyd.css
@@ -1,3 +1,3 @@
-.rpd-dataform.inline {
-    padding: 10px 0;
+.rpd-dataform, .rpd-datagrid {
+    padding: 5px 0;
 }
